Fixed service file

--- a/system-info.service
+++ b/system-info.service
@@ -1,7 +1,9 @@
 [Unit]
 Description=System Info service
 After=network.target
-StartLimitIntervalSec=0[Service]
+StartLimitIntervalSec=0
+
+[Service]
 Type=simple
 Restart=always
 RestartSec=1
