--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ rocket = "0.4.6"
 serde = {version = "1.0.123", features = ["derive"]}
 systemstat = "0.1.6"
 hhmmss = "0.1.0"
+rocket_cors = "0.5.1"
+clap = "3.0.0-beta.2"
 
 [dependencies.rocket_contrib]
 version = "0.4.6"
