--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,15 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.4.6"
-serde = {version = "1.0.123", features = ["derive"]}
+rocket = "0.4.10"
+serde = {version = "1.0.193", features = ["derive"]}
 systemstat = "0.1.6"
 hhmmss = "0.1.0"
 rocket_cors = "0.5.1"
-clap = "3.0.0-beta.2"
+clap = { version = "3.0.0-beta.2", features = ["derive"] }
 hostname = "0.3.1"
 
 [dependencies.rocket_contrib]
-version = "0.4.6"
+version = "0.4.10"
 default-features = false
 features = ["json"]
