--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ serde = {version = "1.0.193", features = ["derive"]}
 systemstat = "0.1.6"
 hhmmss = "0.1.0"
 rocket_cors = "0.5.1"
-clap = { version = "3.0.0-beta.2", features = ["derive"] }
+clap = { version = "4.4.6", features = ["derive"] }
 hostname = "0.3.1"
 
 [dependencies.rocket_contrib]
