feat: Update dependencies and version for system_info_service
- Bump version to 0.2.0 in Cargo.toml
- Upgrade Rocket to 0.5.1 with JSON feature
- Update rocket_cors to 0.6.0
- Add chrono dependency for timestamp handling
- Remove deprecated rocket_contrib dependency

docs: Add deployment guide for system-info-service

- Create DEPLOYMENT.md with detailed instructions for deployment
- Include prerequisites, setup, deployment methods, and troubleshooting sections
- Provide examples and best practices for deployment

chore: Add deployment script for automated deployment

- Create scripts/deploy.sh for deploying to multiple hosts
- Implement git and rsync deployment methods
- Add logging and error handling for deployment process
- Include systemd service setup and restart functionality

feat: Implement health check and system metrics endpoints

- Add health_check_handler and system_all_handler in handlers.rs
- Update main.rs to mount new API routes
- Modify types.rs to include HealthCheckResponse and SystemAllResponse structs
- Ensure all new endpoints return JSON responses with appropriate data

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,17 @@
 [package]
 name = "system_info_service"
-version = "0.1.2"
+version = "0.2.0"
 authors = ["rpg2014 <rpg2014@users.noreply.github.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.4.10"
+rocket = { version = "0.5.1", features = ["json"] }
 serde = {version = "1.0.193", features = ["derive"]}
 systemstat = "0.1.6"
 hhmmss = "0.1.0"
-rocket_cors = "0.5.1"
+rocket_cors = "0.6.0"
 clap = { version = "4.4.6", features = ["derive"] }
 hostname = "0.3.1"
-
-[dependencies.rocket_contrib]
-version = "0.4.10"
-default-features = false
-features = ["json"]
+chrono = "0.4"
